--- a/css/index.css
+++ b/css/index.css
@@ -20,4 +20,5 @@ body {
             .mogura {
                 _width: 100%;
                 _height: 100%;
+                color: #f00;
             }
